fix application and add conference
