# routes/api.php
@@ -2,6 +2,8 @@
 
 use App\Http\Controllers\ApplicationController;
 use App\Http\Controllers\Auth\AuthController;
+use App\Http\Controllers\ConferenceController;
+use App\Http\Controllers\PaymentController;
 use App\Http\Controllers\PublicController;
 use Illuminate\Support\Facades\Route;
 
@@ -17,15 +19,16 @@ use Illuminate\Support\Facades\Route;
 */
 // Landing
 Route::post('/send', [PublicController::class, 'sendMail']);
-Route::post('/application-form', [ApplicationController::class, 'store']);
+Route::post('/application', [ApplicationController::class, 'store']);
+Route::post('/payment', [PaymentController::class, 'getPaymentCard']);
 
 // Admin
 Route::prefix('/admin')->group(function (){
 
     Route::post('/login', [AuthController::class, 'login']);
-
     Route::middleware('auth:api')->group(function (){
         Route::post('/logout', [AuthController::class, 'logout']);
+        Route::resource('/conference', ConferenceController::class);
     });
 });
 
